Added Cucumber and Karate framework